2 mesa water frontend changes: fix floating image overflow

--- a/web/themes/civic/src/scss/partials/paragraphs/_all-modular-sections.scss
+++ b/web/themes/civic/src/scss/partials/paragraphs/_all-modular-sections.scss
@@ -113,4 +113,5 @@
 .modular-section {
   padding-top: 6rem;
   padding-bottom: 6rem; 
+  overflow: auto;
 }
